# rhyme

./: .gitignore  README.md  anotate_words.py  divide_wordclass.py  generate_wordclass.py  main.py  pyproject.toml
